# routes/shipmentRoute.ts
@@ -1,7 +1,11 @@
 import express from "express";
 import validator from "../middleware/validator.js";
-import { cancelShipmentSchema } from "../SchemaTypes/shipmentSchema.js";
 import {
+  cancelShipmentSchema,
+  createShipmentSchema,
+} from "../SchemaTypes/shipmentSchema.js";
+import {
+  createShipment,
   getShipmentHistory,
   cancelShipment,
   generateInvoice,
@@ -9,6 +13,7 @@ import {
 
 const router = express.Router();
 
+router.post("/", validator(createShipmentSchema), createShipment);
 router.get("/history/:userId", getShipmentHistory);
 router.patch("/:shipmentId/cancel", validator(cancelShipmentSchema), cancelShipment);
 router.get("/:shipmentId/invoice", generateInvoice);
